update: リンクカードのリンクを変更

--- a/docs/2024-07-12-markdown記法チェック用記事.md
+++ b/docs/2024-07-12-markdown記法チェック用記事.md
@@ -293,10 +293,10 @@ graph TD;
 
 ### リンクカードの表示
 
-::link-card[https://hackersheet.com]
+::link-card[https://hackersheet.com/]
 
 ```markdown
-::link-card[https://hackersheet.com]
+::link-card[https://hackersheet.com/]
 ```
 
 ### 棋譜の埋め込み
