--- a/docs/2024-07-12-この記事について.md
+++ b/docs/2024-07-12-この記事について.md
@@ -13,7 +13,7 @@ type: default
 
 ## この記事について
 
-::link-card[https://hackersheet.com]
+::link-card[https://hackersheet.com/]
 
 この記事は[Hacker Sheet](https://hackersheet.com)を使って作られています。
 
