update: Markdown記法チェック用記事

--- a/docs/2024-07-12-markdown記法チェック用記事.md
+++ b/docs/2024-07-12-markdown記法チェック用記事.md
@@ -21,23 +21,11 @@ type: default
 
 ###### h6
 
-```markdown
-## h2
-```
-
-```markdown
+```markdown:Markdown
+## 見出し
 ### h3
-```
-
-```markdown
 #### h4
-```
-
-```markdown
 ##### h5
-```
-
-```markdown
 ###### h6
 ```
 
@@ -49,7 +37,7 @@ type: default
   - Item2-2
 - Item3
 
-```markdown
+```markdown:Markdown
 - Item1
 - Item2
   - Item2-1
@@ -61,72 +49,124 @@ type: default
 2. Item2
 3. Item3
 
-```markdown
+```markdown:Markdown
 1. Item1
 2. Item2
 3. Item3
 ```
 
-## コード
+- [ ] Task1
+- [x] Task2
+- [ ] Task3
 
-```javascript
-;(() => {
-  'use strict'
-
-  console.log('Hello world')
-})()
+```markdown:Markdown
+- [ ] Task1
+- [x] Task2
+- [ ] Task3
 ```
 
-````markdown
-```javascript
-;(() => {
-  'use strict'
+## コードブロック
 
-  console.log('Hello world')
-})()
+```typescript:hello.ts
+const message: string = "Hello, World!";
+console.log(message);
+```
+
+````markdown:Markdown
+```typescript:hello.ts
+const message: string = "Hello, World!";
+console.log(message);
+```
+````
+
+### コードブロックにdiffを表示する
+
+```typescript:hello.ts
+const message: string = "Hello, World!"; // [!code --]
+const message: string = "Hello, New World!"; // [!code ++]
+console.log(message);
+```
+
+````markdown:Markdown
+```typescript:hello.ts
+const message: string = "Hello, World!"; // [\!code --]
+const message: string = "Hello, New World!"; // [\!code ++]
+console.log(message);
+```
+````
+
+### コードブロックの行をハイライト
+
+```typescript:hello.ts
+const message: string = "Hello, World!"; // [!code highlight]
+console.log(message);
+```
+
+````markdown:Markdown
+```typescript:hello.ts
+const message: string = "Hello, World!"; // [\!code highlight]
+console.log(message);
+```
+````
+
+### コードブロックの文字をハイライト
+
+```typescript:hello.ts
+// [!code word:Hello]
+const message: string = "Hello, World!";
+console.log(message);
+```
+
+````markdown:Markdown
+```typescript:hello.ts
+// [\!code word:Hello]
+const message: string = "Hello, World!";
+console.log(message);
 ```
 ````
 
 ## インラインコード
 
-`some code`
+インラインで `some code` を記述できます。
 
-```markdown
-`some code`
+```markdown:Markdown
+インラインで `some code` を記述できます。
 ```
 
 ## テキスト装飾
 
-### イタリック
-
-テキストが _イタリック_ になります。
-
-```markdown
-テキストが _イタリック_ になります。
-```
+太字、イタリック、取り消し線でテキストを装飾できます。
 
 ### 太字
 
 テキストが **太字** になります。
 
-```markdown
+```markdown:Markdown
 テキストが **太字** になります。
+```
+
+### イタリック
+
+テキストが _イタリック_ になります。
+
+```markdown:Markdown
+テキストが _イタリック_ になります。
 ```
 
 ### イタリック＋太字
 
 テキストが **_イタリック太字_** になります。
 
-```markdown
+```markdown:Markdown
 テキストが **_イタリック太字_** になります。
 ```
 
-### 打ち消し
+### 取り消し線
 
-テキストが ~~打ち消されます~~。
+テキストに ~~取り消し線~~ を表示します。
 
-```markdown
-テキストが ~~打ち消されます~~。
+```markdown:Markdown
+テキストに ~~取り消し線~~ を表示します。
 ```
 
 ## 表
@@ -136,7 +176,7 @@ type: default
 | Data   | Data   | Data   |
 | Data   | Data   | Data   |
 
-```markdown
+```markdown:Markdown
 | Header | Header | Header |
 | ------ | ------ | ------ |
 | Data   | Data   | Data   |
@@ -147,7 +187,7 @@ type: default
 
 [Title](https://example.com)
 
-```markdown
+```markdown:Markdown
 [Title](https://example.com)
 ```
 
@@ -159,7 +199,7 @@ type: default
 >
 > この文章は引用です
 
-```markdown
+```markdown:Markdown
 > この文章は引用です
 >
 > この文章は引用です
@@ -171,21 +211,19 @@ type: default
 
 ![Hacker Sheetトップページ](../assets/hackersheet-top-page.jpg)
 
-```markdown
+```markdown:Markdown
 ![Hacker Sheetトップページ](../assets/hackersheet-top-page.jpg)
 ```
 
-## 数式
-
-### 数式（インライン）
+## 数式（インライン）
 
 数式を $a\ne0$ インラインで表示します。
 
-```markdown
+```markdown:Markdown
 数式を $a\ne0$ インラインで表示します。
 ```
 
-### 数式（ブロック）
+## 数式（ブロック）
 
 $$
 f(x) = \int_{-\infty}^\infty
@@ -193,7 +231,7 @@ f(x) = \int_{-\infty}^\infty
     \,d\xi
 $$
 
-```markdown
+```markdown:Markdown
 $$
 f(x) = \int_{-\infty}^\infty
     \hat f(\xi)\,e^{2 \pi i \xi x}
@@ -213,15 +251,14 @@ $$
     脚注内に改行を追加するには、新しい行の前に 2 つのスペースを付けます。  
     これは 2 行目です。
 
-```markdown
+```markdown:Markdown
 以下に簡単な脚注を示します[^1]。
 
 脚注には複数行を含めることもできます[^2]。
 
 [^1]: 参考資料。
-
 [^2]:
-    脚注内に改行を追加するには、新しい行の前に 2 つのスペースを付けます。  
+    脚注内に改行を追加するには、新しい行の前に 2 つのスペースを付けます。
     これは 2 行目です。
 ```
 
@@ -229,7 +266,7 @@ $$
 
 ---
 
-```markdown
+```markdown:Markdown
 ---
 ```
 
@@ -243,7 +280,7 @@ puts 'Hello, World'
 
 </details>
 
-````markdown
+````markdown:Markdown
 <details><summary>サンプルコード</summary>
 
 ```rb
@@ -263,7 +300,7 @@ graph TD;
     C-->D;
 ```
 
-````markdown
+````markdown:Markdown
 ```mermaid
 graph TD;
     A-->B;
@@ -273,13 +310,69 @@ graph TD;
 ```
 ````
 
+## アラート
+
+アラートは、重要な情報を強調する際に使用できるブロッククォート構文に基づいたMarkdown拡張です。
+
+### NOTE
+
+> [!NOTE]
+> 内容をざっと読み飛ばしても、ユーザーが知っておくべき有益な情報。
+
+```markdown:Markdown
+> [!NOTE]
+> 内容をざっと読み飛ばしても、ユーザーが知っておくべき有益な情報。
+```
+
+### TIP
+
+> [!TIP]
+> 物事をより良く、またはより簡単に行うための役立つアドバイス。
+
+```markdown:Markdown
+> [!TIP]
+> 物事をより良く、またはより簡単に行うための役立つアドバイス。
+```
+
+### IMPORTANT
+
+> [!IMPORTANT]
+> ユーザーが目標を達成するために知っておくべき重要な情報。
+
+```markdown:Markdown
+> [!IMPORTANT]
+> ユーザーが目標を達成するために知っておくべき重要な情報。
+```
+
+### WARNING
+
+> [!WARNING]
+> 問題を回避するために、ユーザーがすぐに注意を払うべき緊急の情報。
+
+```markdown:Markdown
+> [!WARNING]
+> 問題を回避するために、ユーザーがすぐに注意を払うべき緊急の情報。
+```
+
+### CAUTION
+
+> [!CAUTION]
+> 特定の行動に伴うリスクや悪影響についての助言。
+
+```markdown:Markdown
+> [!CAUTION]
+> 特定の行動に伴うリスクや悪影響についての助言。
+```
+
 ## Hacker Sheet独自記法
+
+Hacker Sheetでは以下のMarkdown拡張が利用可能です。
 
 ### Xの投稿を埋め込む
 
 ::x-post[https://x.com/naopoyo_tw/status/1745099727606276538]
 
-```markdown
+```markdown:Markdown
 ::x-post[https://x.com/naopoyo_tw/status/1745099727606276538]
 ```
 
@@ -287,7 +380,7 @@ graph TD;
 
 ::youtube[https://www.youtube.com/watch?v=jNQXAC9IVRw]
 
-```markdown
+```markdown:Markdown
 ::youtube[https://www.youtube.com/watch?v=jNQXAC9IVRw]
 ```
 
@@ -295,11 +388,11 @@ graph TD;
 
 ::link-card[https://hackersheet.com/]
 
-```markdown
+```markdown:Markdown
 ::link-card[https://hackersheet.com/]
 ```
 
-### 棋譜の埋め込み
+### 棋譜プレーヤーの埋め込み
 
 ```kifu:mykifu
 先手：相手 3級
@@ -386,7 +479,7 @@ graph TD;
 
 コードブロックの言語の部分を `kifu:<kifu ID>` にすることでプレーヤーに変換します。`<kifu ID>` は手数の移動に使用します。
 
-````markdown
+````markdown:Markdown
 ```kifu:mykifu
 先手：相手 3級
 後手：自分 26級
@@ -471,10 +564,12 @@ graph TD;
 
 </details>
 
-また、文章内から、特定の手数に移動させることもできます。
+### 棋譜プレーヤーの特定の手数への移動
+
+文章内から、特定の手数に移動させることができます。
 
 :kifu-to[mykifu:0]{label="開始局面"} に移動、:kifu-to[mykifu:3] に移動。
 
-```markdown
+```markdown:Markdown
 :kifu-to[mykifu:0]{label="開始局面"} に移動、:kifu-to[mykifu:3] に移動。
 ```
