update: Markdown記法チェック用記事

--- a/docs/2024-07-12-markdown記法チェック用記事.md
+++ b/docs/2024-07-12-markdown記法チェック用記事.md
@@ -171,16 +171,16 @@ console.log(message);
 
 ## 表
 
-| Header | Header | Header |
-| ------ | ------ | ------ |
-| Data   | Data   | Data   |
-| Data   | Data   | Data   |
+| Header | Right alignment | Centering Header |
+| ------ | --------------: | :--------------: |
+| Data   |           1,000 |    Centering     |
+| Data   |           1,000 |       Data       |
 
 ```markdown:Markdown
-| Header | Header | Header |
-| ------ | ------ | ------ |
-| Data   | Data   | Data   |
-| Data   | Data   | Data   |
+| Header | Right alignment | Centering Header |
+| ------ | --------------: | :--------------: |
+| Data   |           1,000 |    Centering     |
+| Data   |           1,000 |       Data       |
 ```
 
 ## リンク
