update: Markdown記法チェック用記事

--- a/docs/2024-07-12-markdown記法チェック用記事.md
+++ b/docs/2024-07-12-markdown記法チェック用記事.md
@@ -384,6 +384,14 @@ Hacker Sheetでは以下のMarkdown拡張が利用可能です。
 ::youtube[https://www.youtube.com/watch?v=jNQXAC9IVRw]
 ```
 
+### GitHub Gistの埋め込み
+
+::gist[https://gist.github.com/naopoyo/a86f5f9414a7b547d7df338a5d2f1873]
+
+```markdown:Markdown
+::gist[https://gist.github.com/naopoyo/a86f5f9414a7b547d7df338a5d2f1873]
+```
+
 ### リンクカードの表示
 
 ::link-card[https://hackersheet.com/]
