update: Markdown記法チェック用記事

--- a/docs/2024-07-12-markdown記法チェック用記事.md
+++ b/docs/2024-07-12-markdown記法チェック用記事.md
@@ -576,8 +576,8 @@ Hacker Sheetでは以下のMarkdown拡張が利用可能です。
 
 文章内から、特定の手数に移動させることができます。
 
-:kifu-to[mykifu:0]{label="開始局面"} に移動、:kifu-to[mykifu:3] に移動。
+:kifu-to[mykifu#0]{label="開始局面"} に移動、:kifu-to[mykifu#3] に移動。
 
 ```markdown:Markdown
-:kifu-to[mykifu:0]{label="開始局面"} に移動、:kifu-to[mykifu:3] に移動。
+:kifu-to[mykifu#0]{label="開始局面"} に移動、:kifu-to[mykifu#3] に移動。
 ```
